SERVER-37881 Add a deadline for the coordinator preparing a transaction